# Q1_Accel_2026_Adam

escrow-litesvm/programs/anchor-escrow/src/: lib.rs
escrow-litesvm/programs/anchor-escrow/src/instructions/: take.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
magicblock-er-example/: Anchor.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: consume_randomness.rs  mod.rs  request_randomness.rs  update_user.rs
magicblock-er-example/tests/: er-state-account.ts
rust-challenge-1/: Cargo.toml
rust-challenge-1/src/: main.rs
solana-gpt-tuktuk/: .pnp.cjs  Anchor.toml  package-lock.json
solana-gpt-tuktuk/cron/: cron.mjs  cron.ts  package-lock.json  package.json
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/: Cargo.toml
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/src/: lib.rs  state.rs  types.rs
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/src/instructions/: ask_gpt.rs  initialize.rs  mod.rs  receive.rs  schedule.rs
solana-gpt-tuktuk/tests/: solana-gpt-tuktuk.ts
tuktuk-counter/programs/tuktuk-counter/: Cargo.toml
tuktuk-counter/programs/tuktuk-counter/src/state/: counter.rs  mod.rs
whitelist-transfer-hook/: package-lock.json  package.json
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/instructions/: init_extra_account_meta.rs  initialize_whitelist.rs  mint_token.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+3 files in other folders)
