[package]
name = "solana-gpt-tuktuk"
version = "0.1.0"
description = "Solana GPT Oracle + Tuktuk Scheduler"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_gpt_tuktuk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }